Fully implement SwaggerController endpoints BE and provide repository
